INCLUDES = $(all_includes)  -I$(top_srcdir)/kvoctrain/kvoctrain -I$(top_srcdir)/kvoctrain/kvoctrain/kvt-core

noinst_LTLIBRARIES = libdocpropdlg.la

libdocpropdlg_la_SOURCES = \
  TitlePage.cpp    TypeOptPage.cpp      TenseOptPage.cpp     UsageOptPage.cpp \
  TitlePageForm.ui TypeOptPageForm.ui   TenseOptPageForm.ui  UsageOptPageForm.ui \
  LessOptPage.cpp    DocOptionsPage.cpp    LangPropPage.cpp \
  LessOptPageForm.ui DocOptionsPageForm.ui LangPropPageForm.ui \
  DocPropDlg.cpp    DocPropLangDlg.cpp

METASOURCES = AUTO
