INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../kvt-core \
-I$(srcdir)/../docprop-dialogs $(all_includes)

noinst_LTLIBRARIES = libentrydlg.la

libentrydlg_la_SOURCES =  \
  PhoneticEntryPage.cpp  \
  PhoneticEntryPageForm.ui  \
  FromToEntryPage.cpp    CommonEntryPage.cpp     AuxInfoEntryPage.cpp \
  FromToEntryPageForm.ui CommonEntryPageForm.ui  AuxInfoEntryPageForm.ui \
  TenseEntryPage.cpp     AdjEntryPage.cpp        MCEntryPage.cpp \
  TenseEntryPageForm.ui  AdjEntryPageForm.ui     MCEntryPageForm.ui \
  EntryDlg.cpp           EntryDlgForm.ui \
  MySpinBox.cpp blockall.cpp

METASOURCES = AUTO

