INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../kvt-core \
     -I../docprop-dialogs -I$(srcdir)/../docprop-dialogs  -I$(top_builddir)/kvoctrain/kvoctrain/common-dialogs $(all_includes)

noinst_LTLIBRARIES = libentrydlg.la

libentrydlg_la_SOURCES = PhoneticEntryPage.cpp FromToEntryPage.cpp \
	CommonEntryPage.cpp AuxInfoEntryPage.cpp FromToEntryPageForm.ui CommonEntryPageForm.ui \
	AuxInfoEntryPageForm.ui TenseEntryPage.cpp AdjEntryPage.cpp MCEntryPage.cpp \
	TenseEntryPageForm.ui AdjEntryPageForm.ui MCEntryPageForm.ui EntryDlg.cpp MySpinBox.cpp \
	blockall.cpp

METASOURCES = AUTO

