



########### install files ###############

install( FILES sample-de.kvtml sample-en.kvtml  DESTINATION  ${DATA_INSTALL_DIR}/kvoctrain/examples )




#original Makefile.am contents follow:

#
#examples_DATA = sample-de.kvtml sample-en.kvtml
#examplesdir = $(kde_datadir)/kvoctrain/examples
#
#EXTRA_DIST = sample-template-ascii.kvtml
#
