INCLUDES = -I$(srcdir)/../../../libkdeedu/kdeeducore \
	-I$(top_builddir)/libkdeedu/kdeeducore -I$(srcdir)/.. -I../queryoption-dialogs \
	-I$(srcdir)/../queryoption-dialogs -I$(top_builddir)/kvoctrain/kvoctrain/common-dialogs $(all_includes)

lib_LTLIBRARIES = libkvoctraincore.la

METASOURCES = AUTO

libkvoctraincore_la_SOURCES = langset.cpp LineList.cpp UsageManager.cpp QueryManager.cpp




