INCLUDES = $(all_includes)  -I$(top_srcdir)/kvoctrain/kvoctrain -I$(top_srcdir)/kvoctrain/kvoctrain/kvt-core

noinst_LTLIBRARIES = liboptiondlg.la

liboptiondlg_la_SOURCES = \
  GenOptPageForm.ui  LangOptPageForm.ui   ViewOptPageForm.ui   PasteOptPageForm.ui \
  GenOptPage.cpp     LangOptPage.cpp      ViewOptPage.cpp      PasteOptPage.cpp \
  GeneralOptionsDlg.cpp

METASOURCES = AUTO

