



########### install files ###############

install( FILES   DESTINATION  ${DATA_INSTALL_DIR}/kvoctrain/icons )

kde4_install_icons( ${ICON_INSTALL_DIR}  hicolor )




#original Makefile.am contents follow:

#kvoctrainiconsdir = $(kde_datadir)/kvoctrain/icons
#
#kvoctrainicons_ICON = AUTO
#
#KDE_ICON = kvoctrain
#
