
pics_DATA = 16x16-kvoctrain.xpm new.xpm lesson.xpm\
 list-win.xpm pron-win.xpm\
 delete-row.xpm append-row.xpm edit-row.xpm \
 conf-save.xpm gen-conf.xpm query-conf.xpm \
 flags.xpm reset.xpm statist.xpm \
 delete-col.xpm append-col.xpm \
 rand-less.xpm run-verb.xpm  run-art.xpm  run-adj.xpm \
 run-query.xpm  run-multi.xpm \
 sort_alpha.xpm sort_num.xpm cleanup.xpm \
 run-syno.xpm run-anto.xpm  run-exmp.xpm  run-para.xpm \
 entry-in-query.png  entry-inactive.png logo.png

picsdir = $(kde_datadir)/kvoctrain

KDE_ICON = kvoctrain

