INCLUDES = -I$(srcdir)/.. -I../common-dialogs -I$(srcdir)/../kvt-core \
 $(all_includes)

noinst_LTLIBRARIES = libquerydlg.la

libquerydlg_la_SOURCES =  \
  QueryDlgBase.cpp     MyProgress.cpp \
  MCQueryDlgForm.ui    RandomQueryDlgForm.ui  SimpleQueryDlgForm.ui \
  MCQueryDlg.cpp       RandomQueryDlg.cpp     SimpleQueryDlg.cpp \
  VerbQueryDlgForm.ui  AdjQueryDlgForm.ui     ArtQueryDlgForm.ui  \
  VerbQueryDlg.cpp     AdjQueryDlg.cpp        ArtQueryDlg.cpp

METASOURCES = AUTO

