INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../kvt-core -I$(top_builddir)/kvoctrain/kvoctrain $(all_includes)

noinst_LTLIBRARIES = libqueryoptiondlg.la

libqueryoptiondlg_la_SOURCES = \
 GroupOptPage.cpp    QueryOptPage.cpp    ThreshOptPage.cpp    BlockOptPage.cpp \
 GroupOptPageForm.ui QueryOptPageForm.ui ThreshOptPageForm.ui BlockOptPageForm.ui \
 QueryOptionsDlg.cpp

METASOURCES = AUTO

