INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../kvt-core -I$(top_builddir)/kvoctrain/kvoctrain/common-dialogs $(all_includes)

noinst_LTLIBRARIES = libstatdlg.la

libstatdlg_la_SOURCES = \
  StatistikPage.cpp GenStatPage.cpp \
  StatistikPageForm.ui GenStatPageForm.ui \
  StatistikDlg.cpp

METASOURCES = AUTO

